Tomcat DBCP added

--- a/res/db/mysql/db.properties
+++ b/res/db/mysql/db.properties
@@ -6,10 +6,9 @@ db.password=x2Aht9LND6g3
 db.driver=com.mysql.cj.jdbc.Driver
 
 dao.fqn=com.epam.kkorolkov.finalproject.db.dao.mysql.MysqlDaoFactory
-datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.OneConnectionDataSourceFactory
-
+#datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.OneConnectionDataSourceFactory
+datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.TomcatDataSourceFactory
 mysql.languages.select.all=select * from languages
-mysql.languages.select.by.locale=select id from languages where locale = ?
 
 mysql.publishers.select.one=select * from publishers where id = ?
 mysql.publishers.select.one.by.tag=select * from publishers where tag = ?
