Front except for cart

--- a/res/admin-labels.properties
+++ b/res/admin-labels.properties
@@ -47,6 +47,8 @@ admin.books.header.date=Publishing date
 admin.books.header.quantity=Quantity
 admin.books.header.actions=Actions
 admin.books.count=Total number of books
+admin.books.all.categories=All categories
+admin.books.all.publishers=All publishers
 
 
 admin.orders.count=Total number of orders
