--- a/res/db/mysql/db.properties
+++ b/res/db/mysql/db.properties
@@ -46,9 +46,10 @@ mysql.categories.descriptions.update=update category_descriptions set name = ?, 
 
 mysql.books.select.by.id=select * from books where id = ?
 mysql.books.select.by.tag=select * from books where tag = ?
-mysql.books.select.all=select * from books
 mysql.books.select.count=select count(*) from books
-mysql.books.select.all.with.limit=select * from books limit ? offset ?
+mysql.books.select.all=select * from books
+mysql.books.select.max.price=select max(price) from books
+mysql.books.select.min.price=select min(price) from books
 
 mysql.books.insert=insert into books(id, tag, isbn, quantity, publisher_id, category_id, price, publishing_date) values (default, ?, ?, ?, ?, ?, ?, ?)
 mysql.books.update=update books set tag = ?, isbn = ?, quantity = ?, publisher_id = ?, category_id = ?, price = ?, publishing_date =? where id = ?
