--- a/res/user-labels.properties
+++ b/res/user-labels.properties
@@ -2,7 +2,6 @@ products.login=Login
 products.signup=Sign up
 products.title=Welcome to our book shop!
 products.nav.language=Language
-products.button.load.more=Load more
 
 error.401.message=You have to login in order to view this content.
 error.401.title=Unauthorized user
@@ -11,14 +10,43 @@ error.400.title=Bad request
 user.button.login=Login
 user.button.signup=Sign up
 user.button.cancel=Cancel
+user.button.filter.apply=Apply filter
+user.button.filter.cancel=Cancel filter
+
+products.button.load.more=Load more
+
+product.button.back=Back
+product.button.add.to.cart=Add to cart
 
 user.label.password=Password
 user.label.email=Email
 user.label.firstname=First name
 user.label.lastname=Last name
+user.label.price=Price
+
+user.label.sort.by=Sort by
+user.label.sort.tag.asc=title ascending
+user.label.sort.tag.desc=title descending
+user.label.sort.price.asc=price: from cheap to expensive
+user.label.sort.price.desc=price: from expensive to cheap
+user.label.sort.date.asc=date: newest first
+user.label.sort.date.desc=date: oldest first
+
+user.label.filter=Filter
+user.label.filter.category=Category
+user.label.filter.publisher=Publisher
+user.label.filter.price=Price
+user.label.filter.choose.category=Choose category
+user.label.filter.choose.publisher=Choose publisher
+user.label.title=Title
+user.label.description=Description
 
 user.nav.language=Language
 user.login.title=Login
 user.signup.title=Sign up
+
+
+
+
 
 
