--- a/res/admin-labels.properties
+++ b/res/admin-labels.properties
@@ -131,7 +131,20 @@ error.return=Return
 
 
 
+admin.orders.filter.label.user=Client
+admin.orders.filter.label.sum=Sum
+admin.orders.filter.label.date=Date
+admin.orders.filter.label.status=Status
 
+admin.orders.header.id=ID
+admin.orders.header.client=Client
+admin.orders.header.total=Total
+admin.orders.header.status=Status
+admin.orders.header.date=Date
+
+admin.orders.label.title=Title
+admin.orders.label.quantity=Quantity
+admin.orders.label.change=Change
 
 
 
