--- a/res/db/mysql/db.properties
+++ b/res/db/mysql/db.properties
@@ -6,8 +6,8 @@ db.password=x2Aht9LND6g3
 db.driver=com.mysql.cj.jdbc.Driver
 
 dao.fqn=com.epam.kkorolkov.finalproject.db.dao.mysql.MysqlDaoFactory
-#datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.OneConnectionDataSourceFactory
-datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.TomcatDataSourceFactory
+datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.OneConnectionDataSourceFactory
+#datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.TomcatDataSourceFactory
 
 mysql.languages.select.all=select * from languages
 mysql.languages.select.by.locale=select * from languages where locale = ?
@@ -60,3 +60,13 @@ mysql.books.descriptions.insert=insert into book_descriptions(book_id, language_
 mysql.books.descriptions.update=update book_descriptions set name = ?, description = ? where book_id = ? and language_id = ?
 
 mysql.orders.select.count=select count(*) from orders
+mysql.orders.select.all=select * from orders
+mysql.orders.insert=insert into orders(id, customer_id, status_id, date_added, total) values (default, ?, ?, ?, ?)
+mysql.orders.delete=delete from orders where id = ?
+mysql.orders.update.status=update orders set status_id = ? where id = ?
+
+mysql.orders.details.select=select * from order_details where order_id = ?
+mysql.orders.details.insert=insert into order_details(order_id, book_id, quantity) values (?, ?, ?)
+
+mysql.statuses.select.all=select * from statuses
+mysql.statuses.select.by.id=select * from statuses where id = ?
