--- a/res/user-labels.properties
+++ b/res/user-labels.properties
@@ -40,10 +40,45 @@ user.label.filter.choose.category=Choose category
 user.label.filter.choose.publisher=Choose publisher
 user.label.title=Title
 user.label.description=Description
+user.label.quantity=Quantity
+user.label.signup=Do not have an account?
+
+user.message.not.enough.products=Quantity on stock is not enough to put in the cart.
+
 
 user.nav.language=Language
 user.login.title=Login
 user.signup.title=Sign up
+user.logout.title=Log out
+
+
+cart.button.login=Login to place order
+cart.header.number=#
+cart.header.title=Title
+cart.header.price=Price
+cart.header.quantity=Quantity
+cart.header.sum=Sum
+cart.header.actions=Actions
+cart.button.continue=Continue shopping
+cart.button.place.order=Place order
+
+cart.control.delete=Delete
+cart.control.plus=Increase
+cart.control.minus=Decrease
+
+user.cart.title=Cart
+
+user.success.title=Your order has been successfully placed.
+user.success.header=Your order has been successfully placed. <br> Our managers will reach you soon. <br>Your order number is 
+user.success.home=Main page
+cart.empty.message=Your cart is empty.
+cart.label.total=Total
+
+
+
+
+
+
 
 
 
