--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,17 +8,9 @@
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>/META-INF/context.xml</param-value>
     </context-param>
-    <!--
-    <servlet>
-        <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.xhtml</url-pattern>
-    </servlet-mapping>
--->
+    <session-config>
+        <session-timeout>1440</session-timeout>
+    </session-config>
     <error-page>
         <error-code>404</error-code>
         <location>/jsp/error/404.jsp</location>
@@ -32,7 +24,14 @@
         <filter-name>WelcomeFilter</filter-name>
         <url-pattern>/</url-pattern>
     </filter-mapping>
-
+    <filter>
+        <filter-name>SetSessionFilter</filter-name>
+        <filter-class>com.epam.kkorolkov.finalproject.filter.SetSessionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SetSessionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter>
         <filter-name>CharsetFilter</filter-name>
         <filter-class>com.epam.kkorolkov.finalproject.filter.CharsetFilter</filter-class>
