Functionality completed - profile page added

--- a/res/admin-labels.properties
+++ b/res/admin-labels.properties
@@ -27,12 +27,12 @@ admin.users.header.password=Password
 admin.users.count=Total number of users
 
 admin.publishers.header.id=ID
-admin.publishers.header.tag=Tag
+admin.publishers.header.title=Title
 admin.publishers.header.actions=Actions
 admin.publishers.count=Total number of publishers
 
 admin.categories.header.id=ID
-admin.categories.header.tag=Tag
+admin.categories.header.title=Title
 admin.categories.header.actions=Actions
 admin.categories.count=Total number of categories
 
@@ -136,7 +136,7 @@ admin.orders.filter.label.sum=Sum
 admin.orders.filter.label.date=Date
 admin.orders.filter.label.status=Status
 
-admin.orders.header.id=ID
+admin.orders.header.number=#
 admin.orders.header.client=Client
 admin.orders.header.total=Total
 admin.orders.header.status=Status
