--- a/res/db/mysql/db.properties
+++ b/res/db/mysql/db.properties
@@ -59,8 +59,9 @@ mysql.books.descriptions.select=select * from book_descriptions where book_id = 
 mysql.books.descriptions.insert=insert into book_descriptions(book_id, language_id, title, description) values (?, ?, ?, ?)
 mysql.books.descriptions.update=update book_descriptions set name = ?, description = ? where book_id = ? and language_id = ?
 
-mysql.orders.select.count=select count(*) from orders
+mysql.orders.count=select count(*) from orders
 mysql.orders.select.all=select * from orders
+mysql.orders.select.by.customer=select * from orders where customer_id = ? order by date_added limit ? offset ?
 mysql.orders.insert=insert into orders(id, customer_id, status_id, date_added, total) values (default, ?, ?, ?, ?)
 mysql.orders.delete=delete from orders where id = ?
 mysql.orders.update.status=update orders set status_id = ? where id = ?
