--- a/res/user-labels.properties
+++ b/res/user-labels.properties
@@ -74,6 +74,15 @@ user.success.home=Main page
 cart.empty.message=Your cart is empty.
 cart.label.total=Total
 
+user.profile.title=Profile
+user.welcome=Welcome
+user.orders.header.number=#
+user.orders.header.date=Date
+user.orders.header.total=Total
+user.orders.header.status=Status
+user.orders.label.title=Title
+user.orders.label.quantity=Quantity
+
 
 
 
