Functionality completed - bugs fixed

--- a/res/admin-labels.properties
+++ b/res/admin-labels.properties
@@ -117,7 +117,7 @@ admin.books.edit.button.submit=Save
 admin.categories.button.import=Import
 admin.publishers.button.import=Import
 admin.books.button.import=Import
-admin.books.button.filter=Filter
+admin.button.filter=Filter
 
 
 
@@ -131,7 +131,7 @@ error.return=Return
 
 
 
-admin.orders.filter.label.user=Client
+admin.orders.filter.label.user=Client ID
 admin.orders.filter.label.sum=Sum
 admin.orders.filter.label.date=Date
 admin.orders.filter.label.status=Status
@@ -145,6 +145,8 @@ admin.orders.header.date=Date
 admin.orders.label.title=Title
 admin.orders.label.quantity=Quantity
 admin.orders.label.change=Change
+
+admin.orders.all.statuses=All statuses
 
 
 
