--- a/res/user-labels.properties
+++ b/res/user-labels.properties
@@ -82,6 +82,7 @@ user.orders.header.total=Total
 user.orders.header.status=Status
 user.orders.label.title=Title
 user.orders.label.quantity=Quantity
+user.message.user.blocked=You are unable to place order. Please contact administrator.
 
 
 
