Finished with comments.

--- a/res/admin-labels.properties
+++ b/res/admin-labels.properties
@@ -7,7 +7,6 @@ admin.nav.language=Language
 
 admin.nav.users=Manage users
 admin.nav.orders=Manage orders
-admin.nav.catalogue=Manage catalogue
 
 admin.nav.publishers=Manage publishers
 admin.nav.categories=Manage categories
@@ -18,7 +17,7 @@ admin.nav.books=Manage books
 
 admin.users.header.id=ID
 admin.users.header.firstname=First name
-admin.users.header.laststname=Last name
+admin.users.header.lastname=Last name
 admin.users.header.email=Email
 admin.users.header.administrator=Is administrator
 admin.users.header.blocked=Is blocked
@@ -43,7 +42,6 @@ admin.books.header.isbn=ISBN
 admin.books.header.price=Price
 admin.books.header.publisher=Publisher
 admin.books.header.category=Category
-admin.books.header.date=Publishing date
 admin.books.header.quantity=Quantity
 admin.books.header.actions=Actions
 admin.books.count=Total number of books
@@ -119,17 +117,8 @@ admin.publishers.button.import=Import
 admin.books.button.import=Import
 admin.button.filter=Filter
 
-
-
-error.code.503.title=503 Service Unavailable
-error.code.503.message=Server is currently unavailable. Please, try again later.
 error.code.400.title=400 Bad request
 error.return=Return
-
-
-
-
-
 
 admin.orders.filter.label.user=Client ID
 admin.orders.filter.label.sum=Sum
