--- a/res/db/mysql/db.properties
+++ b/res/db/mysql/db.properties
@@ -12,7 +12,7 @@ dao.fqn=com.epam.kkorolkov.finalproject.db.dao.mysql.MysqlDaoFactory
 datasource.fqn=com.epam.kkorolkov.finalproject.db.datasource.TomcatDataSourceFactory
 
 mysql.languages.select.all=select * from languages
-mysql.languages.select.by.locale=select * from languages where locale = ?
+#mysql.languages.select.by.locale=select * from languages where locale = ?
 
 mysql.publishers.select.one=select * from publishers where id = ?
 mysql.publishers.select.one.by.tag=select * from publishers where tag = ?
