--- a/res/user-labels.properties
+++ b/res/user-labels.properties
@@ -1,9 +1,5 @@
-products.login=Login
-products.signup=Sign up
 products.title=Welcome to our book shop!
 products.nav.language=Language
-
-
 
 user.button.login=Login
 user.button.signup=Sign up
@@ -43,7 +39,6 @@ user.label.signup=Do not have an account?
 
 user.message.not.enough.products=Quantity on stock is not enough to put in the cart.
 
-
 user.nav.language=Language
 user.login.title=Login
 user.signup.title=Sign up
@@ -82,15 +77,13 @@ user.orders.label.title=Title
 user.orders.label.quantity=Quantity
 user.message.user.blocked=You are unable to place order. Please contact administrator.
 
-error.500.title=500 Internal Server Error
+#error.500.title=500 Internal Server Error
 error.button.back=Back
 error.button.home=Home
-error.404.title=404 Not Found
 error.404.message=Server cannot find the requested resource
 error.button.login=Login
 error.401.message=You have to login in order to view this content.
-error.401.title=401 Unauthorized User
-error.400.title=400 Bad Request
+#error.400.title=400 Bad Request
 
 
 
